# newnew

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  Cargo.toml  go.mod  go.sum
backend-rust/src/: db.rs  logsvc.rs  main.rs  middleware.rs
backend-rust/src/handlers/: admin.rs  mod.rs  playground.rs
backend/cmd/server/: main.go
backend/config/: config.go
backend/internal/db/: db.go
backend/internal/dto/: dto.go
backend/internal/handler/admin/: admin.go  playground.go
backend/internal/handler/relay/: relay.go
backend/internal/middleware/: middleware.go
backend/internal/model/: channel.go  log.go  playground.go  setting.go  token.go  user.go
backend/internal/relay/claude/: client.go
backend/internal/relay/openai/: client.go
backend/internal/router/: router.go
backend/internal/service/billing/: calc.go  calc_test.go
backend/internal/service/channel/: select.go
backend/internal/service/convert/: convert.go  convert_test.go  stream.go  stream_usage_test.go
backend/internal/service/log/: write.go
backend/src/: billing.rs  channel_select.rs  config.rs  convert.rs  dto.rs  lib.rs  main.rs  models.rs  state.rs  stream.rs  upstream.rs  util.rs  webui.rs
backend/src/handlers/: relay.rs
desktop/: package.json  pnpm-lock.yaml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/stub/: index.html
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: FormDrawer.tsx  GateLogo.tsx  IconPicker.tsx  MarkdownView.tsx
frontend/src/hooks/: useEditableRows.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: Channels.tsx  Dashboard.tsx  Login.tsx  Logs.tsx  Playground.tsx  Settings.tsx  Setup.tsx  Tokens.tsx
frontend/src/utils/: auth.ts  format.ts  lobeIcons.tsx  logContent.ts  models.ts
scripts/: _run.js  build-backend.js  build-backend.ps1  build-desktop.js  build-desktop.ps1  build-frontend.js  build-frontend.ps1  build-fullstack.js  build-fullstack.ps1  gen-desktop-icons.js  package.json  pnpm-lock.yaml
