[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[lib]
name = "gateway"
path = "src/lib.rs"

[[bin]]
name = "gateway"
path = "src/main.rs"

[features]
default = []
# Embed frontend/dist into the binary and serve it with an SPA fallback.
# Build the frontend first (scripts/build-fullstack.ps1 does both).
embed-frontend = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
tokio-stream = "0.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dotenvy = "0.15"
rand = "0.8"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
