[package]
name = "opengate-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
gateway = { path = "../../backend", features = ["embed-frontend"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
axum = "0.8"

[profile.release]
lto = "thin"
